<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:scrollbars="none"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/header" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/card_bg"
            android:orientation="vertical" >
            
            <TextView
		        android:id="@id/error_title"
		        android:text="@string/error_title"
		        android:paddingLeft="@dimen/text_block_side_padding"
		        android:paddingTop="@dimen/text_block_top_padding"
		        android:paddingRight="@dimen/text_block_side_padding"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textAlignment="viewStart"
		        android:paddingStart="@dimen/text_block_side_padding"
		        android:paddingEnd="@dimen/text_block_side_padding"
		        style="@style/CardTitle" />
            
            	<LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
					android:layout_marginBottom="14.0dip"
			        android:layout_marginLeft="@dimen/card_padding"
			        android:layout_marginRight="@dimen/card_padding">
		        
			        <TextView
			            android:id="@id/error_descr"
			            style="@style/CardTextNoCutoff"
			            android:ellipsize="none"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_vertical"
			            android:text="@string/error_descr" />
			        
		    	</LinearLayout>
		    	
           	<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal" >
		
		        <ImageView
		            android:id="@id/error_image"
		            android:layout_width="fill_parent"
		            android:layout_height="200dp"
		            android:layout_gravity="center_horizontal"
		            android:scaleType="centerInside"
		            android:src="@drawable/ic_error_cloud" />
		
		    </LinearLayout>
		    
			<Button
		        android:id="@id/retry_button"
		        android:visibility="visible"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_retry"
		        android:drawableLeft="@drawable/btn_playback_play"
		        android:gravity="center_vertical|center_horizontal|left"
		        style="@style/CardActionButtonWithIconNoTopDivider" />
		    
        </LinearLayout>

    </LinearLayout>

</ScrollView>