<?xml version="1.0" encoding="utf-8"?>
<!-- Taken from Google Now version 3.1.8.914827 for Android -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bg"
    android:orientation="vertical" >

	<TextView
        android:id="@id/music_title"
        android:text="@string/music_title_default"
        android:paddingLeft="@dimen/text_block_side_padding"
        android:paddingTop="@dimen/text_block_top_padding"
        android:paddingRight="@dimen/text_block_side_padding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:paddingStart="@dimen/text_block_side_padding"
        android:paddingEnd="@dimen/text_block_side_padding"
        style="@style/CardTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
		android:layout_marginBottom="16.0dip"
        android:layout_marginLeft="@dimen/card_padding"
        android:layout_marginRight="@dimen/card_padding">
        
        <TextView
            android:id="@id/music_artist"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/music_artist_default" />
        
    </LinearLayout>
    
    <!--LinearLayout
        android:id="@id/event_location_section"
        android:orientation="horizontal"
        style="@style/CalendarEventCardTextBlock"
        android:visibility="visible" >

        <TextView
            android:id="@+id/votes_prefix"
            style="@style/CardLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/votes"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_votes_count" />
        
    </LinearLayout>
    <LinearLayout
        android:id="@id/card_tagline"
        style="@style/CalendarEventCardTextBlock">
        <TextView
            android:id="@+id/mycard_points"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_name_label"
            style="@style/CardLightText" />
        <TextView android:id="@id/calendar_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/CardText" />
    </LinearLayout>
    <LinearLayout
        android:id="@id/event_description_section"
        style="@style/CalendarEventCardTextBlock">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            style="@style/CardLightText" />
        <TextView
            android:id="@id/event_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/CardText" />

    </LinearLayout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageView
            android:id="@id/music_cover"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />

    </LinearLayout>

    <!--LinearLayout
        android:id="@id/event_guests_section"
        style="@style/CalendarEventCardTextBlock">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guests_label"
            style="@style/CardLightText" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@id/event_guests"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout-->
    
    <com.lesikapk.openradiobrony.PlayButton
        android:id="@id/playpause_button"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_playpause_default"
        android:drawableStart="@drawable/btn_playback_play"
        style="@style/CardActionButtonWithIconNoTopDivider" />
    
    <Button android:id="@id/stop_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop"
        android:drawableStart="@drawable/btn_playback_stop"
        style="@style/CardActionButtonWithIcon" />
</LinearLayout>